_Resources/css_styles/site_styles.scss
@use 'styles_common';
@use 'components/floating_text';
@use 'components/mini_contents';
/* T E X T   F E A T U R E S */

body {
  /*background-color: #CCC;*/
  color: #000;
  margin: auto;
  text-align: justify;
  height: 100%;
  width: 85%;
}
.p {
  margin-bottom: 0.5em;
}

.navigation {
  background-color: #fff;
  color: #036;
  float: left;
  font-weight: bold;
  height: 100%;
  padding: 1.5%;
  width: 11.8%;
  position: fixed;
  margin-left: -15%;
  overflow: hidden;
}
.navigation-title {
  font-size: 14pt;
  font-weight: normal;
}
.navigation-date {
  font-size: 10pt;
}
.navigation-editor {
  font-size: 10pt;
  font-weight: normal;
}
.subnavigation {
  font-weight: normal;
  padding-left: 1em;
}
.content,
.apparatus,
.essay,
.note,
.glosses,
.webpage,
.figure {
  background-color: transparent;
  /*float: right;*/

  overflow: auto;
  padding-bottom: 8%;
  padding-left: 10%;
  padding-right: 10%;
  padding-top: 8%;
}
@media all and (max-width: 900px) {
  .content,
  .apparatus,
  .essay,
  .note,
  .glosses,
  .webpage,
  .figure {
    height: 90%;
    width: auto;
  }
}
@media all and (min-width: 901px) {
  .content,
  .apparatus,
  .essay,
  .note,
  .glosses,
  .webpage,
  .figure {
    height: 72%;
    width: 65%;
  }
  body {
    margin-left: 15%;
  }
}

.page-title {
  /* x New 04/06/16 */
  color: #036;
  font-size: 18pt;
  .title-text {
    font-weight: bold;
  }
}
.head-title-webpage {
  color: #036;
  font-size: 18pt;
}
.content_subnavigation {
}
.head-section {
  color: #036;
  font-size: 16pt;
  margin-top: 13px;
  display: block;
}

.head-subsection {
  color: #036;
  font-size: 14pt;
}
.head-sub-subsection {
  color: #036;
  font-size: 14pt;
  font-style: italic;
  margin-top: 13px;
  display: block;
}
.subsection {
  padding-top: 20px;
}

/* D e c o r a t i o n */

.caps {
  text-transform: uppercase;
}
.center {
  /* x New 04/06/16 */
  text-align: center;
}
.smallcaps {
  font-size: 8pt;
  text-transform: uppercase;
}
sub {
  line-height: 0em;
}
sup {
  line-height: 0em;
}

/* L i s t s */

ul {
  color: #000;
  list-style-type: square;
  padding-right: 30px;
  font-size: 12pt;
}

/* T a b l e s */

.tablespace {
  position: relative;
  overflow: auto;
}
.head-table {
  color: #036;
  font-size: 10pt;
  text-align: left;
}
table {
  border-collapse: collapse;
  font-size: 8pt;
  table-layout: fixed;
  text-align: center;
  width: 100%;
}
.label {
  font-weight: bold;
}
td {
  border: 1px solid #000;
  padding: 0.5em;
  width: 150px;
}

/* N A V I G A T I O N */

#toolbar {
  border-top: 1px solid #036;
  color: #ccc;
  margin-top: 1em;
  width: 100%;
}
.toggle {
  padding-right: 1em;
}
.controls {
  padding-bottom: 1em;
  padding-top: 1em;
  text-align: center;
}
.facsimile {
  float: left;
  height: 800px;
  overflow: auto;
  text-align: center;
  width: 50%;
}
.witness {
  float: right;
  /* height: 800px;
	overflow: auto; */
  text-align: left;
  width: 50%;
}
#top_button {
  bottom: 0.5em;
  color: #036;
  font-size: 2em;
  position: fixed;
  right: 1em;
  text-align: center;
}

/* H Y P E R L I N K S */

a:link {
  color: #036;
  text-decoration: none;
}
a:visited {
  color: #036;
  text-decoration: none;
}
a:hover {
  color: #06c;
  text-decoration: none;
}
a:active {
  color: #036;
  text-decoration: none;
}

/* E M B E D D E D   F O N T S

Cross-browser support REQUIRES that 1) the style sheet containing the @font-face rule(s), 2) the font(s) referenced by those rule(s), 3) the Web
page(s) that will use them share the SAME folder, and 4) IE8-compatible webfonts be listed first. */

.font_test {
  font-family: Andron;
}

/* W I T N E S S   T E X T   F E A T U R E S */

.anthology {
  color: #000;
  font-family: Andron;
  font-size: 12pt;
  line-height: 1.25em;
  text-align: center;
}
.date {
  background-color: #fff;
  padding-bottom: 1em;
  padding-left: 2em;
  padding-right: 2em;
  padding-top: 1em;
}
.g-justification {
  border-top: 1px solid #000;
  display: inline-block;
  line-height: 0.25em;
}
.g-pause-period {
  /* x New 04/06/16. Style? */
}
.g-runover {
  /* x New 04/06/16. Style? */
}
.g-terminal_comma {
  /* x New 04/06/16. Style? */
}

.l {
  display: block;
  position: relative;
  text-align: justify;
  text-justify: inter-word;
  /* overflow: hidden; */
}
/* .l:after {
  content: "";
  display: inline-block;
  width: 100%;
} */

p {
  position: relative;
}
.pb {
  border-top: 1px solid #ccc;
  margin-left: -5em;
  margin-right: -5em;
  padding-bottom: 1em;
}
.poem,
.prose {
  background-color: #fff;
  display: inline-block;
  padding-bottom: 1em;
  padding-left: 2em;
  padding-right: 2em;
  padding-top: 1em;
  text-align: left;
  white-space: nowrap;
}
.runover {
  bottom: -1em;
  position: absolute;
}
.title {
  padding-bottom: 1.5em;
  position: relative;
}

/* D e c o r a t i o n */

.caps {
  text-transform: uppercase;
}
.smallcaps {
  font-size: 8pt;
  text-transform: uppercase;
}

/* H o r i z o n t a l   R u l e s */

.full {
  border-top: 1px solid #000;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 1.5em;
  text-align: center;
}
.threequarter {
  border-top: 1px solid #000;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 1.5em;
  width: 18em;
}
.half {
  border-top: 1px solid #000;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 1.5em;
  width: 12em;
}
.quarter {
  border-top: 1px solid #000;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 1.5em;
  width: 6em;
}

/* P a g e   N u m b e r s*/

.pageNum-top {
  /* border-top: 5px solid #CCC;           Removed to .pb */
  margin-left: -2em;
  margin-right: -2em;
  padding-top: 1em;
  text-align: center;
}
.pageNum-top-left {
  /* border-top: 5px solid #CCC;           Removed to .pb */
  margin-left: -2em;
  margin-right: -2em;
  padding-left: 2em;
  padding-top: 1em;
  text-align: left;
}
/* ... */

